# optparse-simple

./: .travis.yml  circle.yml  optparse-simple.cabal
test/: Helper.hs  Main.hs
test/Options/Applicative/: SimpleSpec.hs
