name:                optparse-simple
version:             0.0.3
synopsis:            Simple interface to optparse-applicative
description:         Simple interface to optparse-applicative
license:             BSD3
license-file:        LICENSE
author:              FP Complete
maintainer:          chrisdone@fpcomplete.com
copyright:           2015 FP Complete
category:            Options
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Options.Applicative.Simple
  build-depends:     base >= 4 && <5
                   , template-haskell
                   , transformers
                   , optparse-applicative
                   , gitrev
                   , either

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  build-depends:
                     base -any
                   , optparse-simple -any
                   , template-haskell -any
                   , transformers -any
                   , optparse-applicative -any
                   , directory -any
                   , bytestring -any
                   , gitrev -any
                   , either -any
  hs-source-dirs:    src test
  ghc-options:       -Wall -O2
